--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"svelte-simple-modal": "^1.5.2",
 		"tailwindcss": "^3.2.7",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
@@ -34,7 +35,15 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@popperjs/core": "^2.11.6",
+		"@sveltejs/svelte-virtual-list": "^3.0.1",
 		"apexcharts": "^3.37.1",
-		"svelte-apexcharts": "^1.0.2"
+		"classnames": "^2.3.2",
+		"dayjs": "^1.11.7",
+		"flowbite": "^1.6.3",
+		"flowbite-svelte": "^0.30.4",
+		"svelte-apexcharts": "^1.0.2",
+		"svelte-french-toast": "^1.0.3",
+		"svelte-icons": "^2.1.0"
 	}
 }
