chore: postinstall script

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
 		"build:db": "prisma db push",
-		"vercel-build": "prisma generate && vite build"
+		"vercel-build": "prisma generate && vite build",
+		"postinstall": "prisma generate"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
