--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
 		"build:db": "prisma db push",
 		"vercel-build": "prisma generate && prisma migrate deploy && vite build",
 		"postinstall": "prisma generate",
-		"@prisma/client": "4.15.0",
-		"prisma": "^4.15.0"
+		"postbuild": "cp node_modules/@prisma/engines/query-engine-* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
@@ -31,6 +30,8 @@
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"@prisma/client": "4.15.0",
+		"prisma": "^4.15.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"svelte-simple-modal": "^1.5.2",
