--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
 		"build:db": "prisma db push",
-		"vercel-build": "prisma generate && prisma migrate deploy && vite build",
-		"postinstall": "prisma generate",
-		"postbuild": "cp -R node_modules/@prisma/engines/* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/"
+		"vercel-build": "prisma generate && prisma migrate deploy && npm run build",
+		"postinstall": "prisma generate"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
