--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "prisma generate && prisma db push && vite build",
-		"vercel-build": "prisma generate && prisma db push && vite build",
+		"vercel-postbuild": "cp node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/",
+		"vercel-build": "prisma generate && npm build && npm vercel-postbuild",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -15,6 +16,7 @@
 		"build:db": "prisma db push"
 	},
 	"devDependencies": {
+		"@prisma/client": "4.11.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-vercel": "^3.0.1",
 		"@sveltejs/kit": "^1.5.0",
@@ -28,7 +30,6 @@
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
-		"@prisma/client": "4.11.0",
 		"prisma": "^4.11.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
