--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"vercel-postbuild": "cp node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/",
-		"vercel-build": "prisma generate && npm run build && npm vercel-postbuild",
+		"vercel-postbuild": "cp node_modules/@prisma/engines/*query* .vercel/output/functions/fn.func/ && cp prisma/schema.prisma .vercel/output/functions/fn.func/",
+		"vercel-build": "prisma generate && npm run build && npm run vercel-postbuild",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
