--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@prisma/client": "^4.15.0",
 		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/svelte-virtual-list": "^3.0.1",
+		"@vercel/analytics": "^1.0.1",
 		"apexcharts": "^3.37.1",
 		"classnames": "^2.3.2",
 		"dayjs": "^1.11.7",
