--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@neodrag/svelte": "^2.0.3",
 		"@popperjs/core": "^2.11.6",
 		"@prisma/client": "^4.15.0",
+		"@supabase/supabase-js": "^2.25.0",
 		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/svelte-virtual-list": "^3.0.1",
 		"@vercel/analytics": "^1.0.1",
@@ -55,6 +56,7 @@
 		"flowbite-svelte": "^0.30.4",
 		"generate-unique-id": "^2.0.1",
 		"lz-string": "^1.4.4",
+		"puppeteer": "^20.7.2",
 		"svelte-apexcharts": "^1.0.2",
 		"svelte-french-toast": "^1.0.3",
 		"svelte-icons": "^2.1.0"
