--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/adapter-vercel": "^3.0.1",
 		"@sveltejs/kit": "^1.20.2",
-		"@types/lz-string": "^1.3.34",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.13",
@@ -44,12 +43,12 @@
 		"@neodrag/svelte": "^2.0.3",
 		"@popperjs/core": "^2.11.6",
 		"@prisma/client": "^4.15.0",
+		"@sparticuz/chromium-min": "^114.0.0",
 		"@supabase/supabase-js": "^2.25.0",
 		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/svelte-virtual-list": "^3.0.1",
 		"@vercel/analytics": "^1.0.1",
 		"apexcharts": "^3.37.1",
-		"chrome-aws-lambda": "^10.1.0",
 		"classnames": "^2.3.2",
 		"dayjs": "^1.11.7",
 		"flatted": "^3.2.7",
