--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"apexcharts": "^3.37.1",
 		"classnames": "^2.3.2",
 		"dayjs": "^1.11.7",
+		"file-saver": "^2.0.5",
 		"flatted": "^3.2.7",
 		"flowbite": "^1.6.3",
 		"flowbite-svelte": "^0.30.4",
