fix: cors allowed origins

--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
 			"source": "/api/migrate",
 			"headers": [
 				{ "key": "Access-Control-Allow-Credentials", "value": "true" },
-				{ "key": "Access-Control-Allow-Origin", "value": "https://nodewar.oracle-tools.site/" },
+				{ "key": "Access-Control-Allow-Origin", "value": "https://nodewar.oracle-tools.site" },
 				{ "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
 				{
 					"key": "Access-Control-Allow-Headers",
